<resources>
    <string name="app_name">Tennis Game</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="numberOfRound">1</string>
    <string name="win">Win</string>
    <string name="points">Points</string>
    <string name="round">Round</string>
    <string name="increament">+</string>
    <string name="decrement">-</string>
    <string name="of">of</string>
    <string name="totalRound">18</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="finish">Finish</string>
</resources>
