<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/player_1"
        android:textColor="@color/playerName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numberRound" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/player_2"
        android:textColor="@color/playerName"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/numberRound" />

    <TextView
        android:id="@+id/numberRound"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:text="@string/numberOfRound"
        android:textColor="@color/roundColor"
        app:layout_constraintEnd_toStartOf="@+id/textView11"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/win"
        android:textColor="@color/winColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberWinPlayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberWinPlayer1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/points"
        android:textColor="@color/pointsColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/currentPointsPlayer1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/currentPointsPlayer1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/round"
        android:textColor="@color/roundColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberRound"
        app:layout_constraintEnd_toStartOf="@+id/numberRound"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/numberRound" />

    <TextView
        android:id="@+id/numberWinPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/numberWinPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/currentPointsPlayer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numberWinPlayer1"
        app:layout_constraintStart_toStartOf="@+id/numberWinPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/numberWinPlayer1" />

    <TextView
        android:id="@+id/currentPointsPlayer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/numberWinPlayer2"
        app:layout_constraintStart_toStartOf="@+id/numberWinPlayer2"
        app:layout_constraintTop_toBottomOf="@+id/numberWinPlayer2" />

    <Button
        android:id="@+id/increamentButtonPlayer2"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginTop="24dp"
        android:background="@color/backgroundButton"
        android:text="@string/increament"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/increamentButtonPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/currentPointsPlayer2" />

    <Button
        android:id="@+id/increamentButtonPlayer1"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:background="@color/backgroundButton"
        android:text="@string/increament"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/increamentButtonPlayer2"
        app:layout_constraintEnd_toStartOf="@+id/increamentButtonPlayer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/increamentButtonPlayer2"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/decreamentButtonPlayer2"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@color/backgroundButton"
        android:gravity="center"
        android:text="@string/decrement"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/decreamentButtonPlayer1"
        app:layout_constraintTop_toBottomOf="@+id/increamentButtonPlayer2" />

    <Button
        android:id="@+id/decreamentButtonPlayer1"
        android:layout_width="72dp"
        android:layout_height="42dp"
        android:background="@color/backgroundButton"
        android:gravity="center"
        android:text="@string/decrement"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/decreamentButtonPlayer2"
        app:layout_constraintEnd_toStartOf="@+id/decreamentButtonPlayer2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/decreamentButtonPlayer2" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/of"
        android:textColor="@color/roundColor"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/numberRound"
        app:layout_constraintEnd_toStartOf="@+id/totalNumberOfRound"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/numberRound"
        app:layout_constraintTop_toTopOf="@+id/numberRound" />

    <TextView
        android:id="@+id/totalNumberOfRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="3dp"
        android:text="@string/totalRound"
        android:textColor="@color/roundColor"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <Button
        android:id="@+id/buttonResett"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/backgroundButton"
        android:text="@string/reset"
        android:textColor="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Finish" />

    <Button
        android:id="@+id/Finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/backgroundButton"
        android:text="@string/finish"
        android:textColor="@color/colorButton"
        app:layout_constraintBottom_toTopOf="@+id/buttonResett"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/decreamentButtonPlayer1" />
</android.support.constraint.ConstraintLayout>